--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "expo-router-typescript",
   "scripts": {
-    "build:android": "npx eas-cli build --platform android",
-    "build:ios": "npx eas-cli build --platform ios --local",
+    "build:android": "npx eas-cli build -p android --profile preview --local",
+    "build:ios": "npx eas-cli build -p ios --profile preview --local",
     "build:web": "npx expo export --platform web -c --output-dir web-build",
     "dev": "npm run start",
     "format": "npx prettier src --write",
@@ -43,6 +43,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.11",
+    "react-native-webview": "11.26.0",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
