--- a/package.json
+++ b/package.json
@@ -19,46 +19,40 @@
     "web": "expo start --web --no-dev --host localhost --port 3000"
   },
   "overrides": {
-    "expo-constants": "~14.2.1",
-    "json5": ">2.2.2",
-    "optionator": ">0.9.1",
-    "semver": ">=7.5.2",
-    "xml2js": ">0.5.0"
+    "@expo/config-plugins": "~7.2.2"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "expo": "^48.0.0",
-    "expo-constants": "~14.2.1",
-    "expo-dev-client": "~2.2.1",
-    "expo-font": "~11.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "expo": "^49.0.10",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.8",
+    "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11",
-    "react-native-webview": "11.26.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "^19.0.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.0.1",
     "@types/jest": "^29.5.0",
-    "@types/react": "~18.0.27",
-    "@types/react-native": "~0.70.6",
+    "@types/react": "~18.2.14",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
@@ -72,6 +66,6 @@
     "jest-expo": "^48.0.0",
     "prettier": "^2.8.4",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   }
 }
