feat(tde-00): January 2024 update

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,30 +1,15 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
+  "env": { "browser": true, "es2022": true, "node": true },
   "ignorePatterns": ["www"],
   "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
+  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+  "settings": { "react": { "version": "detect" } },
   "plugins": ["react", "@typescript-eslint"],
+
   "rules": {
-    "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/no-non-null-assertion": 0,
-    "indent": 0,
-    "quotes": 0,
-    "linebreak-style": ["error", "unix"],
     "react/react-in-jsx-scope": 0,
-    "semi": ["error", "never"]
+    "@typescript-eslint/no-empty-interface": 0
   }
 }
