--- a/eas.json
+++ b/eas.json
@@ -1,10 +1,3 @@
 {
-  "build": {
-    "preview": {
-      "ios": {
-        "simulator": true
-      }
-    },
-    "production": {}
-  }
+  "build": { "preview": { "ios": { "simulator": true } }, "production": {} }
 }
