--- a/package.json
+++ b/package.json
@@ -13,59 +13,53 @@
     "publish:web": "firebase deploy --only hosting",
     "serve:app": "expo start --dev-client",
     "serve:web": "npx serve web-build --single",
+    "setup": "npm i --save expo@latest; npx expo install",
     "start": "expo start",
     "test": "jest",
     "upgrade": "expo upgrade",
     "web": "expo start --web --no-dev --host localhost --port 3000"
   },
   "overrides": {
-    "@expo/config-plugins": "~7.2.2"
+    "semver": ">=7.5.4"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "expo": "^49.0.10",
-    "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.8",
+    "@react-navigation/native": "^6.1.9",
+    "expo": "^49.0.21",
+    "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
+    "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-animatable": "^1.3.3",
+    "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2",
-    "styled-components": "^5.3.8"
+    "react-native-web": "~0.19.10",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@testing-library/jest-native": "^5.4.2",
-    "@testing-library/react-native": "^12.0.1",
-    "@types/jest": "^29.5.0",
-    "@types/react": "~18.2.14",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.26",
-    "@types/styled-components-react-native": "^5.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
+    "@babel/core": "^7.23.7",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.11",
+    "@types/react": "~18.2.46",
+    "@types/react-test-renderer": "^18.0.7",
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
     "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.32.2",
-    "jest": "^29.2.1",
-    "jest-expo": "^48.0.0",
-    "prettier": "^2.8.4",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.7.0",
+    "jest-expo": "^49.0.0",
+    "prettier": "^3.1.1",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   }
 }
