--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "publish:web": "firebase deploy --only hosting",
     "serve:app": "expo start --dev-client",
     "serve:web": "npx serve web-build --single",
-    "setup": "npm i --save expo@^49; npx expo install",
+    "setup": "npm i --save expo@^50; npx expo install",
     "start": "expo start",
     "test": "jest",
     "upgrade": "expo upgrade",
@@ -24,20 +24,20 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
-    "expo": "^49.0.22",
-    "expo-dev-client": "~2.4.12",
-    "expo-font": "~11.4.0",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.14",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.4",
+    "expo-dev-client": "~3.3.7",
+    "expo-font": "~11.10.2",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.6",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^5.3.11"
   },
@@ -57,7 +57,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
-    "jest-expo": "^49.0.0",
+    "jest-expo": "~50.0.1",
     "prettier": "^3.1.1",
     "react-test-renderer": "^18.2.0",
     "typescript": "^5.3.3"
