--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
-    "expo": "^50.0.4",
-    "expo-dev-client": "~3.3.7",
+    "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.6",
+    "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
@@ -58,7 +58,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~50.0.4",
     "prettier": "^3.1.1",
     "react-test-renderer": "^18.2.0",
     "typescript": "^5.3.3"
