--- a/package.json
+++ b/package.json
@@ -24,30 +24,30 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
-    "expo": "~50.0.17",
-    "expo-dev-client": "~3.3.12",
-    "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.22",
+    "expo-dev-client": "~4.0.20",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.18",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
+    "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.11",
-    "@types/react": "~18.2.46",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.7",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
@@ -58,7 +58,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~51.0.3",
     "prettier": "^3.1.1",
     "react-test-renderer": "^18.2.0",
     "typescript": "^5.3.3"
