--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build:android": "npx eas-cli build -p android --profile preview --local",
     "build:ios": "npx eas-cli build -p ios --profile preview --local",
-    "build:web": "npx expo export --platform web -c --output-dir web-build",
+    "build:web": "npx expo export --platform web -c --output-dir dist",
     "dev": "npm run start",
     "format": "npx prettier src --write",
     "lint": "eslint src/**/*.tsx src/**/*.ts",
@@ -12,7 +12,7 @@
     "publish:expo": "npx eas-cli update",
     "publish:web": "firebase deploy --only hosting",
     "serve:app": "expo start --dev-client",
-    "serve:web": "npx serve web-build --single",
+    "serve:web": "npx serve dist",
     "setup": "npm install expo && expo install",
     "start": "expo start --go",
     "test": "jest",
@@ -20,47 +20,57 @@
     "web": "expo start --web --no-dev --host localhost --port 3000"
   },
   "overrides": {
-    "semver": ">=7.5.4"
+    "cookie": "^0.7.0"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
-    "expo": "^51.0.22",
-    "expo-dev-client": "~4.0.20",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "@react-navigation/native": "^7.0.0",
+    "expo": "~52.0.7",
+    "expo-dev-client": "~5.0.1",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.5",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "styled-components": "^5.3.11"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "^4.0.0",
+    "react-native-web": "~0.19.13",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@eslint/js": "^9.14.0",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.4.3",
-    "@types/jest": "^29.5.11",
-    "@types/react": "~18.2.79",
-    "@types/react-test-renderer": "^18.0.7",
+    "@testing-library/react-native": "^12.8.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~18.3.12",
+    "@types/react-test-renderer": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
-    "prettier": "^3.1.1",
-    "react-test-renderer": "^18.2.0",
-    "typescript": "^5.3.3"
+    "jest-expo": "~52.0.1",
+    "prettier": "^3.3.3",
+    "react-test-renderer": "^18.3.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   }
 }
