--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Expo",
   "compilerOptions": {
+    "types": ["./global.d.ts", ],
     "allowJs": true,
     "esModuleInterop": true,
     "jsx": "react-native",
@@ -18,6 +19,6 @@
     },
     "strict": true
   },
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"],
+  "exclude": ["jest.config.js"],
   "extends": "expo/tsconfig.base"
 }
