--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.6",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.13"
   },
@@ -54,6 +54,7 @@
     "@types/styled-components-react-native": "^5.2.5",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
+    "ajv": "^8.17.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
